FlightCalculator/force-app/main/default/objects/Flight__c/Flight__c.object-meta.xml
<CustomObject>
    <label>Flight</label>
    <nameField>
        <label>Flight Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>