FlightCalculator/force-app/main/default/objects/Flight__c/fields/ArrivalAirport__c.field-meta.xml
<CustomField>
    <fullName>ArrivalAirport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Arrival Airport</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Arrival</relationshipLabel>
    <relationshipName>Arrival</relationshipName>
    <type>Lookup</type>
</CustomField>