FlightCalculator/force-app/main/default/objects/Flight__c/fields/Departure__c.field-meta.xml
<CustomField>
    <fullName>Departure__c</fullName>
    <label>Departure</label>
    <type>TextArea</type>
</CustomField>