FlightCalculator/force-app/main/default/objects/Flight__c/fields/DepartureAirport__c.field-meta.xml
<CustomField>
    <fullName>DepartureAirport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Departure Airport</label>
    <referenceTo>Airport__c</referenceTo>
    <relationshipLabel>Departures</relationshipLabel>
    <relationshipName>Departure</relationshipName>
    <type>Lookup</type>
</CustomField>