FlightCalculator/force-app/main/default/objects/Flight__c/fields/FlightDistance__c.field-meta.xml
<CustomField>
    <fullName>FlightDistance__c</fullName>
    <label>Flight distance</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>